--- a/commonstylelibrary/src/main/res/values/styles.xml
+++ b/commonstylelibrary/src/main/res/values/styles.xml
@@ -19,7 +19,8 @@
     <style name="Common_EditText">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">50dp</item>
-        <item name="android:background">@null</item>
+        <item name="android:paddingLeft">10dp</item>
+        <item name="android:background">@color/colorItemBg</item>
     </style>
 
     <!--通用分割线-->
